# dating-dapp

./: Cargo.toml  README.md  canister_ids.json  dfx.json  did.sh  fill_test_data.sh  package-lock.json  package.json  run_tests.sh  tailwind.config.js  tsconfig.json  webpack.config.js
src/DDate_backend/: Cargo.toml  DDate.did  DDate_backend.did  ddate_backend.did
src/DDate_backend/src/: chat_functionality.rs  image_upload.rs  lib.rs  notification.rs  profile_creation.rs  profile_matcher.rs  profile_picture_uploader.rs  right_and_left_swipe.rs  user_profiles.rs
src/DDate_frontend/assets/: .ic-assets.json5  main.css
src/DDate_frontend/src/: .ic-assets.json5  AllRoutes.jsx  App.jsx  firebase.jsx  index.html  index.js  index.jsx
src/DDate_frontend/src/Components/: Explore.jsx  Feedback.jsx  Footer.jsx  Info.jsx  Loader.css  Loader.jsx  LogoutModal.jsx  MemberStatistics.jsx  MessagePage.jsx  NoMatchModal.css  NoMatchModal.jsx  Notification.css  Notification.jsx  Profile.css  Profile.jsx  ProfileMobile.jsx  ProfileModal.jsx  ProfileModal2.jsx  ProfileViewer.jsx  SidebarComponent.jsx  Swipe.css  Swipe.jsx  SwipeBottomBar.jsx  WalletModal.jsx
src/DDate_frontend/src/Components/Chatting/: Chat.jsx  ChatSidebar.jsx  ChattingPage.jsx  ChattingSinglePage.jsx  (+6 more)
src/DDate_frontend/src/Context/: AuthContext.jsx  ChatContext.jsx
src/DDate_frontend/src/Pages/: HomePage.jsx
src/DDate_frontend/src/auth/: useAuthClient.jsx
src/dateEveryday_backend/: Cargo.toml
src/dateEveryday_backend/src/: lib.rs  user_profiles.rs
src/dateEveryday_frontend/src/: index.html  index.js
(+23 files in other folders)
